# club-bot

./: .gitignore  Dockerfile  LICENSE  README.md  clubs.csv  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ruff.yml  sourcery.yml  update-image.yml
utils/: data.py  db.py  messages.py  ui.py
